--- a/css/app.css
+++ b/css/app.css
@@ -6,20 +6,12 @@
   }
   
   /* layout styles */
-  nav {
+  h5 {
     background: var(--primary);
     border-bottom: 10px solid var(--secondary);
-  }
-  nav a {
-    text-transform: uppercase;
-    color: var(--title);
-  }
-  nav a span {
     font-weight: bold;
+    text-align: center;
   }
-  nav .sidenav-trigger {
-    margin: 0;
-  } 
   
   /* form-styles */
   .add-btn {
@@ -28,11 +20,4 @@
   input {
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
-  }
-  .side-form button {
-    background: var(--title);
-    box-shadow: 1px 1px 3px rgba(90, 90, 90, 0.2);
-  }
-  form .input-field {
-    margin-top: 30px;
   }
